création page confirmation et test unitaire

--- a/confirmation.html
+++ b/confirmation.html
@@ -22,21 +22,27 @@
                 	<ul class="site-navigation">
                     	<li> <a class= "nav-title" href="index.html"> ACCUEIL </a></li>
 						<li> <a class= "nav-title" href="panier.html"> PANIER </a></li>     
-						<li class="iconShopping">
-							<p class= "icon-number">0</p>
-							<i class="fa fa-shopping-cart fa-2x"></i>                   
+						                
                 	</ul>   
             	</nav>
         </header>           
         	<main class="content">
+
+				<article id="orderConfirm">
+				
+
+				</article>
 			
-			
+				<button id="resetCart">
+					<a href="index.html">Revenir sur la boutique</a>
+				</button>
+
 			<footer class="footer">
 				<p class="footer-info">Orinoco vous remercie de votre visite.</p>
 				<p class="footer-copyright">Copyright © 2019 - 2020 | Orinoco</p>
 			</footer>       
 
-			 <script src="index.js"></script>         
+			 <script src="confirmation.js"></script>         
     </body>
 </html>
 
