--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header class="top">
                 <div class="logo">
-                    <img src="images/15675819263013_image1.png" height="90" width="150" alt="Logo Oricono">
+                    <a class= "nav-title" href="index.html"><img src="images/15675819263013_image1.png" height="90" width="150" alt="Logo Oricono"></a>
                 </div>
             	<nav>
                 	<ul class="site-navigation">
@@ -24,7 +24,7 @@
 						<li> <a class= "nav-title" href="panier.html"> PANIER </a></li>     
 						<li class="iconShopping">
 							<p class= "icon-number">0</p>
-							<i class="fa fa-shopping-cart fa-2x"></i>                   
+							<a class= "cart-icon" href="panier.html"><i class="fa fa-shopping-cart fa-2x"></i></a>            
                 	</ul>   
             	</nav>
         </header>           
