ajout regex et image  fond de page

--- a/confirmation.html
+++ b/confirmation.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
-    <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="style.css".css>
-		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>        
-		<title>Document</title>
-		
-		<script>
-		
-			
-		</script>
+<html lang="fr">
 
-    </head>
-    <body>
-        <header class="top">
-                <div class="logo">
-                    <img src="images/15675819263013_image1.png" height="90" width="150" alt="Logo Oricono">
-                </div>
-            	<nav>
-                	<ul class="site-navigation">
-                    	<li> <a class= "nav-title" href="index.html"> ACCUEIL </a></li>
-						<li> <a class= "nav-title" href="panier.html"> PANIER </a></li>     
-						                
-                	</ul>   
-            	</nav>
-        </header>           
-        	<main class="content">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css" .css>
+	<link rel="stylesheet" type="text/css"
+		href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<title>Document</title>
 
-				<article id="orderConfirm">
-				
+	<script>
 
-				</article>
-			
-				<button id="resetCart">
-					<a href="index.html">Revenir sur la boutique</a>
-				</button>
 
-			<footer class="footer">
-				<p class="footer-info">Orinoco vous remercie de votre visite.</p>
-				<p class="footer-copyright">Copyright © 2019 - 2020 | Orinoco</p>
-			</footer>       
+	</script>
 
-			 <script src="confirmation.js"></script>         
-    </body>
+</head>
+
+<body>
+	<header class="top">
+		<div class="logo">
+			<img src="images/15675819263013_image1.png" height="90" width="150" alt="Logo Oricono">
+		</div>
+		<nav>
+			<ul class="site-navigation">
+				<li> <a class="nav-title" href="index.html"> ACCUEIL </a></li>
+				<li> <a class="nav-title" href="panier.html"> PANIER </a></li>
+
+			</ul>
+		</nav>
+	</header>
+	<main class="content">
+
+		<article id="orderConfirm">
+
+
+		</article>
+
+		<button class="btn" id="resetCart">
+			<a href="index.html">Revenir sur la boutique</a>
+		</button>
+
+		<footer class="footer">
+			<p class="footer-info">Orinoco vous remercie de votre visite.</p>
+			<p class="footer-copyright">Copyright © 2019 - 2020 | Orinoco</p>
+		</footer>
+
+		<script src="confirmation.js"></script>
+</body>
+
 </html>
-
