ajout commentaires et modification titre page

--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 	<link rel="stylesheet" href="style.css" .css>
 	<link rel="stylesheet" type="text/css"
 		href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-	<title>Document</title>
-
-	<script>
-
-
-	</script>
+	<title>Oricono</title>
 
 </head>
 
@@ -40,7 +35,6 @@
 				<!-- ajout dynamic de le liste d'article du catalogue de index.js-->
 
 			</div>
-
 
 		</article>
 	</main>
