--- a/confirmation.html
+++ b/confirmation.html
@@ -7,12 +7,7 @@
 	<link rel="stylesheet" href="style.css" .css>
 	<link rel="stylesheet" type="text/css"
 		href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-	<title>Document</title>
-
-	<script>
-
-
-	</script>
+	<title>Confirmation de commande</title>
 
 </head>
 
