--- a/panier.html
+++ b/panier.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-    <title>Document</title>
-
-
-
+    <title>Panier</title>
 
 </head>
 
@@ -40,7 +37,6 @@
                 <table></table>
             </div>
         </div>
-
 
         <form method="POST " id="form" class="form-content">
 
