--- a/produit.html
+++ b/produit.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-    <title>Document</title>
+    <title>Détail produits</title>
 
 </head>
 
