--- a/panier.html
+++ b/panier.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css"
         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-    <title>Panier</title>
+    <title>Panier Oricono</title>
 
 </head>
 
